<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="302dp"
        android:layout_height="276dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ntut" />

    <Button
        android:id="@+id/later_than_dinner"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/later_then_dinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfast" />

    <Button
        android:id="@+id/drink"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/drink"
        app:layout_constraintStart_toEndOf="@+id/later_than_dinner"
        app:layout_constraintTop_toBottomOf="@+id/lunch" />

    <Button
        android:id="@+id/dinner"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/dinner"
        app:layout_constraintStart_toEndOf="@+id/lunch"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/breakfast"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="72dp"
        android:text="@string/breakfast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/lunch"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/lunch"
        app:layout_constraintStart_toEndOf="@+id/breakfast"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>