<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".result">
    <ImageView
        android:id="@+id/map"
        android:layout_width="302dp"
        android:layout_height="276dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/shop_name"
        android:layout_width="299dp"
        android:layout_height="40dp"
        android:text="@string/shop_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="299dp"
        android:layout_height="40dp"
        android:text="@string/menu"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_name" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="299dp"
        android:layout_height="56dp"
        android:text="@string/tag"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/address"
        android:layout_width="299dp"
        android:layout_height="70dp"
        android:text="@string/address"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <Button
        android:id="@+id/back"
        android:layout_width="295dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:onClick="Return"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag" />

</androidx.constraintlayout.widget.ConstraintLayout>